versions/24.10.0/docs/Subtask.md
# Subtask


## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | 
**kwargs** | **{str: (bool, date, datetime, dict, float, int, list, str, none_type)}** |  | 
**graph_layout** | **{str: (bool, date, datetime, dict, float, int, list, str, none_type)}, none_type** |  | 
**trigger** | **str, none_type** |  | 
**name** | **str, none_type** |  | 
**noop_dont_save** | **bool** |  | 
**no_concurrency** | **bool** |  | 
**timeout** | **int, none_type** |  | 
**log_variable** | **bool** |  | 
**task** | **str, none_type** |  | 
**condition_variable** | **str, none_type** |  | 
**condition_value** | **str, none_type** |  | 
**sync** | **bool** |  | 
**queue** | **str, none_type** |  | 
**enqueue_at_front** | **bool** |  | 
**parent** | **int** |  | 
**relative_to** | **int, none_type** |  | 
**validation_error** | **str, none_type** |  | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


